// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`skipPropsWithName rejects empty array 1`] = `
"react-docgen-typescript-loader

  Options Validation Error

  options.skipPropsWithName  should match some schema in anyOf
  options.skipPropsWithName  should NOT have less than 1 items
  options.skipPropsWithName  should be string
"
`;

exports[`skipPropsWithName rejects empty string 1`] = `
"react-docgen-typescript-loader

  Options Validation Error

  options.skipPropsWithName  should match some schema in anyOf
  options.skipPropsWithName  should be array
  options.skipPropsWithName  should NOT be shorter than 1 characters
"
`;

exports[`throws error on unexpected field 1`] = `
"react-docgen-typescript-loader

  Options Validation Error

  options['invalidField']  is an invalid additional property
"
`;

exports[`v2 includes/excludes fields throws error if included 1`] = `
"react-docgen-typescript-loader

  Options Validation Error

  options['includes']  is an invalid additional property
"
`;
